traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:8: error: not found: value coubnter
         coubnter+=1
         ^